Closed Bug 1752881 Opened 3 years ago Closed 3 years ago

Some emojis are displayed in double the size on Windows on machines wih older EmojiOne font installed

Categories

(Core :: Widget: Win32, defect, P2)

Firefox 97
defect

Tracking

()

VERIFIED FIXED
98 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox96 --- unaffected
firefox97 + verified
firefox98 + verified

People

(Reporter: aryx, Assigned: jfkthame)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1746795 +++

Firefox Nightly 98.0a1 20220131094559 on Windows 8.1

Similar to bug 1746795, some EmojiOne Color SVGinOT icons are still shown with twice the expected size, e.g. 🗳 and 🗂 ..

Installed: EmojiOneColor-SVGinOT.ttf 1.3.20160725

Flags: needinfo?(jfkthame)
Severity: -- → S3
Priority: -- → P2
Summary: Flag emojis and others are displayed in double the size on Windows using Firefox Nightly → Some emojis are displayed in double the size on Windows on machines wih older EmojiOne font installed

Can you give a specific example of a page where this happens, please? Is it explicitly styled using EmojiOne?

Flags: needinfo?(jfkthame)

https://mana.mozilla.org/wiki/pages/viewpage.action?pageId=150557364
The 'Rules' tab of the devtools' inspector mentions font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Fira Sans,Droid Sans,Helvetica Neue,sans-serif; with Segoe UI underlined, hence it tries to use Segoe UI emoji (?).

Weird; I'm getting Segoi UI Symbol (i.e. monochrome icons) for those characters on Win10. This does seem surprising....will investigate further.

OK, I think I understand what's happening here. These characters (e.g. U+1F5F3 BALLOT BOX WITH BALLOT) do not have the Emoji_Presentation property (see the second table in https://www.unicode.org/Public/UCD/latest/ucd/emoji/emoji-data.txt), which means that although the can appear with an emoji-style presentation (they have the Emoji property, see the first table there), we do not specifically try to find a color-emoji font to render them; rather, we will prefer a non-color font if available.

So that's why I see them rendered with Segoe UI Symbol on Windows 10; they default to text-style presentation. If I add the variation selector U+FE0F after them, to explicitly ask for emoji-style presentation, I get Segoe UI Emoji, and on Win7 (where Segoe UI Emoji isn't present), I'd expect you to see Twemoji Mozilla (since bug 1746795 made us prefer that over a user-installed EmojiOne Color when searching for an emoji font).

However, without the U+FE0F variation selector, we don't trigger the explicit search for a color emoji font, so we just end up hitting the global fallback code. And that code path still finds EmojiOne Color before it finds Twemoji Mozilla.

I've pushed a try build with a patch that I think should help here, but I don't have a Win7/Win8 machine to test it (and on Win10, the presence of Segoe UI Symbol prevents the problem showing up, even with an old EmojiOne installed).

Sebastian, could you please try the build from https://treeherder.mozilla.org/jobs?repo=try&revision=1c0a74a1566291d6a56a212939effa6c3aaab48c when available, and confirm if it solves the issue for you? Thanks!

Flags: needinfo?(aryx.bugmail)

Thanks, the Try build behaves as expected, both on the mana page and for comment 0 of this bug report.

Flags: needinfo?(aryx.bugmail)
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Has Regression Range: --- → yes
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ecda0074c8e2 Include our preferred emoji fonts in Common Fallbacks on Windows, so that they'll take precedence over random user-installed emoji fonts when no explicit font request applies. r=m_kato

Please submit an uplift request.

Flags: needinfo?(jfkthame)

Comment on attachment 9261651 [details]
Bug 1752881 - Include our preferred emoji fonts in Common Fallbacks on Windows, so that they'll take precedence over random user-installed emoji fonts when no explicit font request applies. r=m_kato

Beta/Release Uplift Approval Request

  • User impact if declined: Some emojis may render badly (oversized) for Windows 7/8 users who have installed an old version of the EmojiOne Color SVGinOT font locally.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: On Win7 or 8.1, install the EmojiOneColor-SVGinOT.ttf font, release 1.3 (NOT the most recent 1.4 release), then view comment 0 here, and the mana page linked in comment 2.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Minor tweak to font fallback, to prioritize bundled emoji font over others in more cases, avoiding fallback to the bad version of EmojiOne Color.
  • String changes made/needed:
Flags: needinfo?(jfkthame)
Attachment #9261651 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9261651 [details]
Bug 1752881 - Include our preferred emoji fonts in Common Fallbacks on Windows, so that they'll take precedence over random user-installed emoji fonts when no explicit font request applies. r=m_kato

Approved for 97.0rc2.

Attachment #9261651 - Flags: approval-mozilla-beta? → approval-mozilla-release+
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch
QA Whiteboard: [qa-triaged]

I have reproduced this issue using Firefox 98.0a1 (2022.01.31) on Win 8.1 x64, installed an old version of the EmojiOneColor-SVGinOT.ttf font (version 1.3) locally then view emojis from comment 0 are displayed in double size and also the mana page linked in comment 2 displays double size emojis.
I can confirm this issue is fixed, I verified using Firefox 98.0a1 (latest nightly) and Firefox 97.0rc2 builds on Win 8.1 x64 the emojis displays in correct size.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: