Bug 1752881 - Include our preferred emoji fonts in Common Fallbacks on Windows, so that they'll take precedence over random user-installed emoji fonts when no explicit font request applies. r=m_kato, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D137510